fix header4 layout issue on mobile

--- a/bustracker/static/css/main.less
+++ b/bustracker/static/css/main.less
@@ -131,31 +131,18 @@ table.list tr.header1 td
     padding: .3em @left-right-margin;
 }
 
-table.list tr.header1 td.header1-left
+table.list tr.header1 td.header1-main
 {
     text-align: left;
     font-size: 2.5em;
     font-weight: bold;
-    width: 60%;
     vertical-align: middle;
 }
 
-table.list tr.header1 td.header1-right
+table.list tr.header1 td.header1-main button
 {
-    text-align: right;
-    width: 40%;
-    font-size: 1.5em;
-    font-weight: normal;
+    font-size: .4em;
     vertical-align: middle;
-    opacity: 0;
-    -webkit-transition: all 0.2s ease;
-    -moz-transition: all 0.2s ease;
-    -o-transition: all 0.2s ease;
-}
-
-div#wrapper:hover td.header1-right
-{
-    opacity: 1;
 }
 
 /* HEADER 2 ROW */
